# bolt

./: .eslintignore  .eslintrc.yml  .gitignore  .prettierignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cliff.toml  LICENSE  README  README.md  RELEASE_PROCESS.md  cliff.toml  package-lock.json  package.json  tsconfig.json  version-align.sh
.github/: pull_request_template.md
cli/: Cargo.toml
cli/npm-package/: .eslintrc  bolt  bolt.ts  package.json  package.json.tmpl
cli/npm-package/scripts/: setupNpmRegistry.js
cli/src/: component.rs  instructions.rs  lib.rs  rust_template.rs  system.rs  workspace.rs  world.rs
cli/src/templates/: component.rs  mod.rs  program.rs  system.rs  workspace.rs  world.rs
cli/src/templates/component/: lib.rs.template  mod.rs
cli/src/templates/program/: constants.rs.template  mod.rs  multiple.lib.rs.template  single.lib.rs
cli/src/templates/system/: lib.rs  mod.rs
cli/src/templates/workspace/: Cargo.serde.toml  Cargo.serde.toml.template  Cargo.toml.template  gitignore  jest.js.template  jest.package.json  jest.ts.package.json.template  mocha.js  mocha.ts.template  mod.rs  package.json  prettierignore  ts.package.json  workspace.toml
crates/bolt-cli/: Cargo.toml
crates/bolt-cli/npm-package/: .eslintignore  package.json  package.json.tmpl  tsconfig.json
crates/bolt-cli/src/: bundle.rs  ephemeral_validator.rs  instructions.rs  lib.rs  rust_template.rs
crates/bolt-cli/src/commands/: mod.rs  test.rs
crates/bolt-cli/src/templates/: ephemeral-validator.toml  mod.rs
crates/bolt-cli/src/templates/bundle/: lib.rs.template  mod.rs
crates/bolt-cli/src/templates/component/: mod.rs
crates/bolt-cli/src/templates/program/: error.rs.template  mod.rs  multiple.lib.rs.template  single.lib.rs.template
crates/bolt-cli/src/templates/workspace/: Cargo.toml.template  types.Cargo.toml.template  workspace.toml.template
crates/bolt-helpers/attribute/system-template/: Cargo.toml
crates/bolt-helpers/attribute/system-template/src/: lib.rs
crates/bolt-helpers/attribute/world-apply/: Cargo.toml
crates/bolt-helpers/attribute/world-apply/src/: lib.rs
crates/bolt-lang/: Cargo.toml
crates/bolt-lang/attribute/: Cargo.toml
crates/bolt-lang/attribute/account/: Cargo.toml
crates/bolt-lang/attribute/account/src/: lib.rs
crates/bolt-lang/attribute/arguments/: Cargo.toml
crates/bolt-lang/attribute/arguments/src/: lib.rs
crates/bolt-lang/attribute/bolt-attribute-bolt-bundle/: Cargo.toml
crates/bolt-lang/attribute/bolt-attribute-bolt-bundle/src/: lib.rs
crates/bolt-lang/attribute/bolt-program/: Cargo.toml
crates/bolt-lang/attribute/bolt-program/src/: lib.rs
crates/bolt-lang/attribute/bundle/: Cargo.toml
crates/bolt-lang/attribute/bundle/src/: lib.rs
crates/bolt-lang/attribute/component/: Cargo.toml
crates/bolt-lang/attribute/component-deserialize/: Cargo.toml
crates/bolt-lang/attribute/component-deserialize/src/: lib.rs
crates/bolt-lang/attribute/component-id/: Cargo.toml
crates/bolt-lang/attribute/component-id/src/: lib.rs
crates/bolt-lang/attribute/component/src/: lib.rs
crates/bolt-lang/attribute/delegate/: Cargo.toml
crates/bolt-lang/attribute/delegate/src/: lib.rs
crates/bolt-lang/attribute/extra-accounts/: Cargo.toml
crates/bolt-lang/attribute/extra-accounts/src/: lib.rs
crates/bolt-lang/attribute/src/: lib.rs
crates/bolt-lang/attribute/src/bundle/: mod.rs
crates/bolt-lang/attribute/src/common/: mod.rs
crates/bolt-lang/attribute/src/component/: attributes.rs  mod.rs
crates/bolt-lang/attribute/src/delegate/: mod.rs
crates/bolt-lang/attribute/src/system/: mod.rs
crates/bolt-lang/attribute/system/: Cargo.toml
crates/bolt-lang/attribute/system-input/: Cargo.toml
crates/bolt-lang/attribute/system-input/src/: lib.rs
crates/bolt-lang/attribute/system/src/: lib.rs
crates/bolt-lang/src/: account.rs  bpf_writer.rs  cpi.rs  errors.rs  lib.rs  prelude.rs
crates/bolt-lang/src/context/: mod.rs
crates/bolt-lang/src/cpi/: mod.rs
crates/bolt-lang/src/instructions/: destroy.rs  initialize.rs  mod.rs  recover_metadata.rs  set_data.rs  set_owner.rs  update.rs
crates/bolt-lang/utils/: Cargo.toml
crates/bolt-lang/utils/src/: lib.rs  metadata.rs
crates/bolt-lang/utils/src/instructions/: mod.rs  set_data.rs  set_owner.rs
crates/bolt-sdk/: Cargo.toml
crates/bolt-sdk/idls/: world.json
crates/bolt-sdk/src/: lib.rs
crates/bolt-sdk/src/wasm_bindgen/: mod.rs
crates/programs/bolt-component/: Cargo.toml
crates/programs/bolt-component/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: component_Fn1JzzEdyb55fsyduWS94mYHizGhJZuhvjX6DVvrmGbQ.rs  lib.rs
examples/bundle/: Cargo.toml
examples/bundle/src/: lib.rs
examples/component-large/: Cargo.toml
examples/component-large/src/: lib.rs
examples/component-position/: Cargo.toml
examples/component-position/src/: lib.rs
examples/component-small/: Cargo.toml
examples/component-small/src/: lib.rs
examples/component-velocity/: Cargo.toml
examples/component-velocity/src/: lib.rs
examples/escrow-funding/: Cargo.toml
examples/escrow-funding/src/: lib.rs
examples/system-apply-velocity/: Cargo.toml
examples/system-apply-velocity/src/: lib.rs
examples/system-fly/: Cargo.toml
examples/system-fly/src/: lib.rs
examples/system-simple-movement/: Cargo.toml
examples/system-simple-movement/src/: lib.rs
examples/system-with-1-component/: Cargo.toml
examples/system-with-1-component/src/: lib.rs
examples/system-with-6-components/: Cargo.toml
examples/system-with-6-components/src/: lib.rs
examples/system-with-few-components/: Cargo.toml
examples/system-with-few-components/src/: lib.rs
examples/system-with-many-components/: Cargo.toml
examples/system-with-many-components/src/: lib.rs
examples/with-large-component/: Cargo.toml
examples/with-large-component/src/: lib.rs
programs/bolt-component/: Cargo.toml
programs/bolt-component/src/: lib.rs
programs/bolt-system/: Cargo.toml
programs/bolt-system/src/: lib.rs
programs/world/: Cargo.toml
programs/world/src/: error.rs  lib.rs
(+315 files in other folders)
