[workspace]
resolver = "2"
members = [
    "crates/bolt-cli",
    "crates/bolt-lang",
    "crates/programs/bolt-component",
    "crates/programs/bolt-system",
    "crates/programs/world",
    "crates/types",
    "examples/*",
]

[workspace.package]
version = "0.2.1"
authors = ["Magicblock Labs <dev@magicblock.gg>"]
repository = "https://github.com/magicblock-labs/bolt"
homepage = "https://www.magicblock.gg/"
license = "MIT"
edition = "2021"

[workspace.dependencies]
bolt-attribute-bolt-program = { path = "crates/bolt-lang/attribute/bolt-program", version = "=0.2.1" }
bolt-attribute-bolt-delegate = { path = "crates/bolt-lang/attribute/delegate", version = "=0.2.1" }
bolt-attribute-bolt-component = { path = "crates/bolt-lang/attribute/component", version = "=0.2.1" }
bolt-attribute-bolt-system = { path = "crates/bolt-lang/attribute/system", version = "=0.2.1"}
bolt-attribute-bolt-system-input = { path = "crates/bolt-lang/attribute/system-input", version = "=0.2.1" }
bolt-attribute-bolt-extra-accounts = { path = "crates/bolt-lang/attribute/extra-accounts", version = "=0.2.1" }
bolt-attribute-bolt-arguments = { path = "crates/bolt-lang/attribute/arguments", version = "=0.2.1" }
bolt-attribute-bolt-component-deserialize = { path = "crates/bolt-lang/attribute/component-deserialize", version = "=0.2.1" }
bolt-attribute-bolt-component-id = { path = "crates/bolt-lang/attribute/component-id", version = "=0.2.1" }
bolt-utils = { path = "crates/bolt-lang/utils", version = "=0.2.1" }
world = { path = "crates/programs/world", features = ["cpi"], version = "=0.2.1"}
bolt-system = { path = "crates/programs/bolt-system", features = ["cpi"], version = "=0.2.1"}
bolt-component = { path = "crates/programs/bolt-component", features = ["cpi"], version = "=0.2.1"}

## External crates
session-keys = { version = "=2.0.6", features = ["no-entrypoint"] }
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
anchor-cli = { version = "=0.30.1" }
anchor-client = { version = "=0.30.1" }
anchor-syn = { version = "=0.30.1" }
anchor-spl = { version = "=0.30.1" }
anchor-lang-idl = { version = "=0.1.1" }
solana-program = { version = "=1.18" }
solana-client = { version = "=1.16" }
solana-security-txt = "1.1.1"
tuple-conv = "1.0.1"
syn = { version = "1.0.60", features = ["full"] }
ligen-ir = { version = "=0.1.18" }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.32"
heck = "0.5.0"
clap = { version = "4.2.4", features = ["derive"] }
ahash = "=0.8.11"
ephemeral-rollups-sdk = "=0.2.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
