[package]
name = "bolt-cli"
rust-version = "1.60"
description = "Bolt CLI"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "bolt"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = true

[features]
dev = []

[dependencies]
anchor-cli = { git = "https://github.com/coral-xyz/anchor.git", rev = "e212105" }
anchor-client = { git = "https://github.com/coral-xyz/anchor.git", rev = "e212105" }
anchor-syn = { git = "https://github.com/coral-xyz/anchor.git", rev = "e212105" }
anyhow = { workspace = true }
serde_json = { workspace = true }
heck = { workspace = true }
clap = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }