[package]
name = "bolt-cli"
rust-version = "1.60"
description = "Bolt CLI"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "bolt"
path = "src/bin/main.rs"

[features]
dev = []

[dependencies]
anchor-cli = { workspace = true }
anchor-client = { workspace = true }
anchor-syn = { workspace = true }
anchor-lang-idl = { workspace = true, features = ["build"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
heck = { workspace = true }
clap = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
world = { workspace = true }
which = { workspace = true }
tokio = { workspace = true }
sysinfo = { workspace = true }
bytemuck_derive = { workspace = true }