[package]
name = "bolt-types"
version = "0.1.1"
description = "Autogenerate types for the bolt language"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bolt_types"

[dependencies]
bolt-lang = { path = "../../crates/bolt-lang" }
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "0f60909" }
