[package]
name = "system-apply-velocity"
description = "Created with Bolt"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "system_apply_velocity"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["metadata"]}
bolt-lang = { path = "../../crates/bolt-lang" }
velocity = { path = "../component-velocity", features = ["cpi"]}
position = { path = "../component-position", features = ["cpi"]}
