[package]
name = "system-apply-velocity"
description = "Created with Bolt"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "system_apply_velocity"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
mpl-token-metadata.workspace = true
velocity = { path = "../component-velocity", features = ["cpi"]}
position = { path = "../component-position", features = ["cpi"]}
