[package]
name = "system-simple-movement"
version = "0.0.1"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "system_simple_movement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
bolt-lang = { path = "../../crates/bolt-lang" }
serde = { version = "*", features = ["derive"] }
