[package]
name = "system-simple-movement"
description = "Created with Bolt"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "system_simple_movement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
serde = { workspace = true }
bolt-lang = { path = "../../crates/bolt-lang" }
bolt-types = { version = "0.1.6", path = "../../crates/types" }
