[package]
name = "bolt-system"
version = "0.0.1"
edition = "2021"
description = "Bolt system template"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "bolt_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
bolt-helpers-system-template = { path = "../../crates/bolt-helpers/attribute/system-template", version = "0.0.1" }