[package]
name = "world"
description = "Bolt World program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "world"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
bolt-component = { path = "../../programs/bolt-component", features = ["cpi"]}
bolt-helpers-world-apply = { path = "../../crates/bolt-helpers/attribute/world-apply" }
bolt-system = { path = "../../programs/bolt-system", features = ["cpi"]}
solana-security-txt = { workspace = true }
tuple-conv = { workspace = true }

