[package]
name = "bolt-attribute"
description = "bolt-attribute"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
bolt-utils = { workspace = true }
heck = { workspace = true }
