[package]
name = "bolt-attribute-bolt-bundle"
description = "bolt-attribute-bolt-bundle"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
bolt-attribute.workspace = true
